# resource-prediction-study

./: .gitignore  Dockerfile  Nodes_SAVIO.txt  README.md  apptainer.def  resource-prediction-study.def  run_benchmarks.def  run_benchmarks.sh
backend/: Dockerfile  requirements.txt
benchmarks/: CMakeLists.txt  run.sh
benchmarks/KNP/: main.cpp
benchmarks/KNPS_FILE/: main.cpp
benchmarks/MATRIX_MULT_ST/: main.cpp
benchmarks/N_QUEENS/: main.cpp
benchmarks/SQL Join/: init_db.py  main.py
benchmarks/TSP/: main.cpp
benchmarks/matrix_multiplication/: main.py
benchmarks/simulated_annealing/: README.md  README.txt  functions.cpp  functions.h  main.cpp  makefile  sa_bench
benchmarks/sql_join/: init_db.py  main.py
models/: feedforward_model.pt  linear_model.joblib  linear_model_time_only.joblib  mc_dropout_model.pt  scaler_g.joblib  x_g_scaler.joblib  x_mm_scaler.joblib  x_st_scaler.joblib  xgboost_model.json  y_g_scaler.joblib  y_mm_scaler.joblib  y_st_scaler.joblib
notebooks/: eda.ipynb  eda_final.ipynb  embedding.ipynb  model.ipynb  modelEnsemble.ipynb  modelEnsemblePreTrained.ipynb  modelFeedForward.ipynb  modelLinearRegression.ipynb  modelLinearRegressionTimeOnly.ipynb  modelMCDropout.ipynb  modelRTDHW.ipynb  modelTabNet.ipynb  modelTransformer.ipynb  modelTransformer_embedding.ipynb  modelTransformer_old.ipynb  modelXGB.ipynb  modelXGB_old.ipynb  requirements.txt
results/: KNP_call.out  KNP_mass.out  N_Queens_call.out  N_Queens_mass.out  TSP_call.out  TSP_mass.out  cpu_usage.csv  execution_time.csv  execution_time_md.csv  execution_time_old.csv  (+1 more)
(+229 files in other folders)
