cmake_minimum_required(VERSION 3.14)
project(benchmarks VERSION 1.0)

set(CMAKE_PREFIX_PATH "/opt/ortools")
find_package(ortools CONFIG REQUIRED)

add_executable(knp KNP/main.cpp)
target_link_libraries(knp ortools::ortools)
add_executable(knps_file KNPS_FILE/main.cpp)
target_link_libraries(knps_file ortools::ortools)
add_executable(n_queens N_QUEENS/main.cpp)
target_link_libraries(n_queens ortools::ortools)
add_executable(tsp TSP/main.cpp)
target_link_libraries(tsp ortools::ortools)
add_executable(matrix_mult_st MATRIX_MULT_ST/main.cpp)
target_link_libraries(matrix_mult_st ortools::ortools)